--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = JapanData
-version = 0.3.0
+version = 0.4.0
 author = Sam Passaglia
 description = Data about Japan
 long_description = file: README.md
@@ -15,10 +15,15 @@ classifiers =
 
 [options]
 package_dir =
-    = src
+    = japandata
 packages = find:
 python_requires = >=3.6
 include_package_data = True
+install_requires = 
+    matplotlib
+    numpy
+    romkan
+    jaconv
 
 [options.packages.find]
-where = src
+where = japandata
