--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = JapanData
-version = 0.4.0
+version = 0.4.1
 author = Sam Passaglia
 description = Data about Japan
 long_description = file: README.md
@@ -14,16 +14,12 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = japandata
-packages = find:
+packages = japandata
 python_requires = >=3.6
-include_package_data = True
 install_requires = 
     matplotlib
     numpy
     romkan
     jaconv
 
-[options.packages.find]
-where = japandata
+include_package_data = True
