--- a/setup.cfg
+++ b/setup.cfg
@@ -14,12 +14,13 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = japandata
 python_requires = >=3.6
 install_requires = 
     matplotlib
     numpy
     romkan
     jaconv
+    geopandas
+    pandas
 
 include_package_data = True
